# lab5-udp-3

./: .gitignore  CMakeLists.txt  LICENSE.md  Lab5_Qt20_2026.docx  README.md
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/include/: mainwindow.h  udpclientcontroller.h
client/src/: mainwindow.cpp  mainwindow.ui  udpclientcontroller.cpp
core/: CMakeLists.txt
core/include/: appsettings.h  udpdatagraminfo.h
core/src/: appsettings.cpp
server/: CMakeLists.txt
server/include/: mainwindow.h  udpservercontroller.h
server/src/: main.cpp  mainwindow.cpp  mainwindow.ui  udpservercontroller.cpp
tests/: CMakeLists.txt  test_appsettings.cpp  test_client_mainwindow.cpp  test_server_mainwindow.cpp  test_udpclientcontroller.cpp  test_udpservercontroller.cpp
